--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,23 @@
-spring.application.name=demo
-spring.docker.compose.enabled=false
+# Configuración del servidor
 server.port=9090
-swagger.enabled=true
+spring.application.name=demo
 
-cors.allowed.origins=*
-cors.allowed.methods=GET,POST,PUT,DELETE
-cors.allowed.headers=Authorization,Content-Type
+# Configuración para Swagger UI
+swagger.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
+
+# Configuración para el manejo de CORS
+spring.mvc.cors.allowed-origins=*
+spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.mvc.cors.allowed-headers=*
+
+# Configuración para la generación de reportes PDF
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# Configuración para la respuesta de descargas
+spring.mvc.contentnegotiation.favor-parameter=true
+
+#configuracion de Docker Compose
+spring.docker.compose.enabled=false
